# QImageAnimator

./: .gitmodules  CMakeLists.txt  README.md
src/: CMakeLists.txt  QClipPlayer.cpp  QClipPlayer.h  QImageAnimator.cpp  QImageAnimator.h  QImageAnimator.ui  QImageAnimator_en_US.ts  ScreenAreaSelection.cpp  ScreenAreaSelection.h  main.cpp
